fixed column spacing

--- a/components/ColumnsContainer.scss
+++ b/components/ColumnsContainer.scss
@@ -1,7 +1,7 @@
 .ColumnsContainer {
   display: flex;
   flex-flow: row nowrap;
-  justify-content: center;
+  justify-content: space-around;
   text-align: center;
   border-right: solid gray 1px;
 
